Fix overflow styling issues with ArticleCTA

--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -1,3 +1,7 @@
+* {
+    min-width: 0;
+}
+
 .prose ul.contains-task-list li {
     list-style-type: none;
     margin: 0;
